Initial work on datapack dragon levels